[project]
name = "compliance-scanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "reportlab>=4.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.15.12"]

[tool.ruff.lint]
# F = pyflakes (unused imports, undefined names, unused variables, bare f-strings)
# E9 = syntax errors
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# Legacy compliance function modules contain intentional side-effect assignments
# (e.g. running a command without checking the result). Suppress F841 there only.
"core/custom_functions/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
